--- a/kitchenette-server/kitchenette-server.csproj
+++ b/kitchenette-server/kitchenette-server.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>kitchenette_server</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.8.1" />
+  </ItemGroup>
+
 </Project>
