add environment to Dockerfile

--- a/kitchenette-server/Dockerfile
+++ b/kitchenette-server/Dockerfile
@@ -13,6 +13,8 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
 COPY --from=build /app/out ./
 
+ENV ASPNETCORE_ENVIRONMENT="Production"
+
 EXPOSE 5280
 
 ENTRYPOINT ["dotnet", "kitchenette-server.dll"]
