--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,6 +2,9 @@ name: kitchenet API
 on:
   workflow_dispatch:
 
+env:
+  AZURE_WEBAPP_NAME: "kitchenet"
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,6 +19,14 @@ jobs:
         run: dotnet restore ./kitchenette-server/kitchenette-server.csproj
         
       - name: Build
-        run: dotnet build ./kitchenette-server/kitchenette-server.csproj --configuration Release --no-restore
-    
-    
+        run: dotnet build ./kitchenette-server/kitchenette-server.csproj -c Release --no-restore
+
+      - name: Publish
+        run: dotnet publish ./kitchenette-server/kitchenette-server.csproj -c Release -o ./publish
+
+      - name: Deploy to Azure App Service
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_PUBLISH_SECRET }}
+          package: ./publish
